--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,111 @@
-body{
-    margin: 0;
-    top:0
+body {
+  margin: 0;
+  top: 0;
+}
+
+.container {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background: rgba(red, rgb(60, 65, 60), rgb(206, 206, 215), 0.4);
+  height: 80%;
+}
+
+.container__title {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: large;
+  font-weight: bolder;
+}
+
+.container__labels {
+  display: flex;
+}
+
+.container__labels p {
+  font-weight: bolder;
+  font-size: larger;
+  margin-left: 80px;
+  margin-right: 80px;
+}
+
+.container__inputs {
+  display: flex;
+}
+
+input[type="number"] {
+  width: 200px;
+  height: 25px;
+  margin-top: 12px;
+  border: none;
+  text-align: center;
+  font-size: 35px;
+}
+input[type="number"]:focus {
+  outline: none;
+}
+
+.container__btns {
+  display: flex;
+}
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 180px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 20px;
+}
+.reset {
+  background-color: #f4511e;
+}
+
+.start {
+  background-color: green;
+}
+.pause {
+  display: none;
+  background-color: yellowgreen;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+/*  It is used to remove the increment Pointer from Input field when type in number */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
